Criado o ambiente para apêndices.

--- a/exemplo.tex
+++ b/exemplo.tex
@@ -42,4 +42,13 @@
 		\bibliographystyle{plain}
 		\bibliography{referencias}
 		
+		\begin{apendices}
+			\chapter{Um apêndice}
+				\lipsum[1-3]
+				
+			\chapter{Outro Apêndice}
+				\lipsum[4-6]
+				
+		\end{apendices}
+		
 \end{document}
