--- a/exemplo/ppgccufmg.cls
+++ b/exemplo/ppgccufmg.cls
@@ -1,3 +1,7 @@
+%%
+%% Copyright (C) 2022 by Ramon Gonçalves Gonze
+%%
+
 %% Identificação da classe %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesClass{ppgccufmg}[2022/05/26 Classe Uma classe LaTeX para dissertações, teses e propostas do Programa de Pós-Graduação em Ciência da Computação (PPGCC) da Universidade Federal de Minas Gerais (UFMG).]
